--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </p>
 
         <div class="about__contact center">
-          <a href="../cleanfolio-minimal-main/pdf/lebenslauf.pdf"
+          <a href="https://thisisgenerated.github.io/cleanfolio-minimal-main/pdf/lebenslauf.pdf"
           target="_blank">
             <span class="btn btn--outline">Lebenslauf</span>
           
@@ -101,7 +101,7 @@
             </ul>
 
             <a
-              href="../cleanfolio-minimal-main/pdf/Projektdoku.pdf"
+              href="https://thisisgenerated.github.io/cleanfolio-minimal-main/pdf/Projektdoku.pdf"
               aria-label="live preview"
               class="link link--icon"
               target="_blank"
@@ -152,7 +152,7 @@
 
       <!-- Contact -->
       <section class="section contact center" id="contact">
-        <h2 class="section__title">Kontact</h2>
+        <h2 class="section__title">Kontakt</h2>
         <a href="mailto:paulhohmann.ph@outlook.de">
           <span class="btn btn--outline">Email</span>
         </a>
