update pdf location

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </p>
 
         <div class="about__contact center">
-          <a href="https://thisisgenerated.github.io/cleanfolio-minimal-main/pdf/lebenslauf.pdf"
+          <a href="thisisgenerated.github.io/cleanfolio-minimal-main/pdf/lebenslauf.pdf"
           target="_blank">
             <span class="btn btn--outline">Lebenslauf</span>
           
@@ -101,7 +101,7 @@
             </ul>
 
             <a
-              href="https://thisisgenerated.github.io/cleanfolio-minimal-main/pdf/Projektdoku.pdf"
+              href="thisisgenerated.github.io/cleanfolio-minimal-main/pdf/Projektdoku.pdf"
               aria-label="live preview"
               class="link link--icon"
               target="_blank"
@@ -121,7 +121,7 @@
               <li class="project__stack-item">JavaScript</li>
             </ul>
             <a
-              href="https://example.com"
+              href="https://thisisgenerated.github.io/photoportfolio/"
               aria-label="live preview"
               class="link link--icon"
             >
