--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </p>
 
         <div class="about__contact center">
-          <a href="/pdf/lebenslauf.pdf"
+          <a href="paulhohmann-portfolio.github.io/pdf/lebenslauf.pdf"
           target="_blank">
             <span class="btn btn--outline">Lebenslauf</span>
           
