--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </p>
 
         <div class="about__contact center">
-          <a href="paulhohmann-portfolio.github.io/pdf/lebenslauf.pdf"
+          <a href="https://1drv.ms/b/s!Aq1ljxtsI8L4hMZPcrV3rg60uGpCvQ?e=prPV6L"
           target="_blank">
             <span class="btn btn--outline">Lebenslauf</span>
           
@@ -101,7 +101,7 @@
             </ul>
 
             <a
-              href="thisisgenerated.github.io/cleanfolio-minimal-main/pdf/Projektdoku.pdf"
+              href="https://1drv.ms/b/s!Aq1ljxtsI8L4hMZQExc5KSkV-2dSXg?e=fbXQmT"
               aria-label="live preview"
               class="link link--icon"
               target="_blank"
